Implement basic layout

--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
     <title>Todo List</title>
   </head>
   <body>
-    
+    <h1>My To Do List</h1>
+    <form action="">
+      <input type="text">
+      <button>Add</button>
+    </form>
+    <ul>
+      <li>
+          <p>Buy groceries</p>
+          <button>Delete</button>
+      </li>
+      <li>
+        <p>Deep clean my car</p>
+        <button>Delete</button>
+      </li>
+      <li>
+        <p>Call my family</p>
+        <button>Delete</button>
+      </li>
+    </ul>
   </body>
 </html>
