--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <h1>My To Do List</h1>
     <form action="">
       <input type="text">
-      <button>Add</button>
+      <button id="button-add">Add</button>
     </form>
-    <ul>
+    <ul id="todo-list">
       <li>
           <p>Buy groceries</p>
           <button>Delete</button>
