--- a/index.html
+++ b/index.html
@@ -8,22 +8,22 @@
   </head>
   <body>
     <h1>My To Do List</h1>
-    <form action="submit">
-      <input type="text" id="newTodoText">
-      <button type="button" id="newTodoButton">Add</button>
+    <form>
+      <input type="text" id="textField">
+      <button type="button" id="buttonAdd">Add</button>
     </form>
     <ul id="todoList">
       <li>
           <p>Buy groceries</p>
-          <button>Delete</button>
+          <button type="button" id="buttonDelete">Delete</button>
       </li>
       <li>
         <p>Deep clean my car</p>
-        <button>Delete</button>
+        <button type="button" id="buttonDelete">Delete</button>
       </li>
       <li>
         <p>Call my family</p>
-        <button>Delete</button>
+        <button type="button" id="buttonDelete">Delete</button>
       </li>
     </ul>
   </body>
