--- a/index.html
+++ b/index.html
@@ -10,20 +10,20 @@
     <h1>My To Do List</h1>
     <form>
       <input type="text" id="textField">
-      <button type="button" id="buttonAdd">Add</button>
+      <button type="button" id="buttonAdd" class="btn btn--add">Add</button>
     </form>
     <ul id="todoList">
       <li>
-          <p>Buy groceries</p>
-          <button type="button" id="buttonDelete">Delete</button>
+        <p>TODO 1</p>
+        <button type="button" class="btn btn--delete">Delete</button>
       </li>
       <li>
-        <p>Deep clean my car</p>
-        <button type="button" id="buttonDelete">Delete</button>
+        <p>TODO 2</p>
+        <button type="button" class="btn btn--delete">Delete</button>
       </li>
       <li>
-        <p>Call my family</p>
-        <button type="button" id="buttonDelete">Delete</button>
+        <p>TODO 3</p>
+        <button type="button" class="btn btn--delete">Delete</button>
       </li>
     </ul>
   </body>
