--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>My To Do List</h1>
     <form>
-      <input type="text" id="textField">
+      <input type="text" id="textField" placeholder="Jot down your task">
       <button type="button" id="buttonAdd" class="btn btn--add">Add</button>
     </form>
     <ul id="todoList">
